# MandelBrotOptim

./: CMakeLists.txt  README.md  main.cpp
